Fixed some CSS so that the dollar sign is vertically aligned with the amount input box.

--- a/style.css
+++ b/style.css
@@ -156,9 +156,10 @@ body {
 .input-container{
     flex: 1;
 }
+
 .input-box {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     font-size: 25px;
     gap: 2px;
     margin-bottom: 15px;
